--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.chatapp.SignUpActivity">
+    tools:context="com.example.Chatterly.SignUpActivity">
 
 
     <com.google.android.material.textfield.MaterialAutoCompleteTextView
@@ -16,7 +16,7 @@
         android:layout_marginTop="176dp"
         android:layout_marginEnd="28dp"
         android:gravity="center_vertical|start"
-        android:hint="ABCSKJDFKJSDBVKJSBKDF"
+        android:hint="Name"
         android:includeFontPadding="false"
         android:paddingStart="15dp"
         android:paddingTop="0dp"
